# agent-swarm

./: .gitignore  .sonarcloud.properties  README.md  benchmark.cjs  benchmark.js  benchmark.ts  doppler.yaml  lock.diff  package-lock.json  package.json  patch_browser_test.diff  perf_test.cjs  pyproject.toml  sonar-project.properties  test-benchmark.js  tsconfig.json  tsconfig.prod.json  vite.config.js  vitest.config.ts  wrangler.template.jsonc
.agents/: mcp_config.json
.agents/rules/: git_guidelines.md
.agy/: settings.json
.circleci/: config.yml
.devcontainer/: .p10k.zsh  .tmux.conf  .zshrc  Dockerfile  devcontainer-lock.json  devcontainer.json  post-create-setup.sh  post-start-setup.sh
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
docs/: article-notes.md  cloudflare-agents.md  integration_guide.md  project-guide.md  stagehand_migration_report.md
scripts/: benchmark.ts  check-secrets.py  cloud_login.sh  get-limits.cjs  run-shared-tests.js  run-wrangler-dev.sh  shared-reporter.js  sync-doppler-secrets.sh  test-agent.js
shop-agents/: README.md  main.py  pyproject.toml
shop-agents/scripts/: check_quotas.py  inspect_shop.py  list_models.py
shop-agents/shop_agents/: __init__.py  config.py  llm.py
shop-agents/shop_agents/agents/: shopper.py
shop-agents/shop_agents/defs/: __init__.py
shop-agents/shop_agents/tools/: browser.py  browser.py.bak
src/: agentLLMClient.test.ts  agentLLMClient.ts  browser.test.ts  browser.ts  index.test.ts  index.test.ts.orig  index.ts
src/scripts/: extract-elements.ts
(+1 files in other folders)
