[project]
name = "shop-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.10.1",
    "dagster",
    "dagster-dg-cli>=1.13.0",
    "dagster-webserver",
    "litellm>=1.82.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "shop_agents.defs"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "shop_agents"
code_location_target_module = "shop_agents.defs"
